// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hlwint API Service able to create broadcast 1`] = `
Object {
  "data": Object {
    "b_start_time": "2018-01-15 10:48:55",
    "b_title": "test title",
    "b_user_id": 384,
    "hash": "aae0a56659b919be6fb238e417c65b64",
    "id": 136,
    "rviewers": 0,
    "tviewers": 0,
    "viewers": 0,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to create tag 1`] = `
Object {
  "data": Object {
    "id": 207,
    "t_color_code": "#c095de",
    "t_count": 12,
    "t_name": "TESTAG",
    "t_status": "active",
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to end broadcast 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to follow user 1`] = `
Object {
  "message": "delete success",
}
`;

exports[`Hlwint API Service able to get Broadcast Detail 1`] = `
Object {
  "data": Object {
    "b_end_time": null,
    "b_start_time": "2018-01-15 09:45:01",
    "b_title": "hello",
    "b_user_id": 1821,
    "hash": "7fc7cc0c9f1801c3ef8a4c02bea7bd1f",
    "id": 1,
    "rviewers": 0,
    "tviewers": 0,
    "viewers": 0,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get Top Ranked user 1`] = `
Object {
  "message": "success",
  "toprank": Array [
    Object {
      "id": 3194,
      "live": 0,
      "rank": "1465",
      "u_first_name": "Yadanar",
      "u_follower_count": 925,
      "u_last_name": "Moe",
      "u_nick_name": "yadanar3194",
      "u_profile_pic": "https://graph.facebook.com/2018473215104706/picture?type=large",
    },
    Object {
      "id": 1768,
      "live": 0,
      "rank": "1225",
      "u_first_name": "Khin",
      "u_follower_count": 1332,
      "u_last_name": "Tar San",
      "u_nick_name": "khin1768",
      "u_profile_pic": "https://graph.facebook.com/1737245439621574/picture?type=large",
    },
    Object {
      "id": 1877,
      "live": 0,
      "rank": "894",
      "u_first_name": "Eaindray",
      "u_follower_count": 296,
      "u_last_name": "Chit Su",
      "u_nick_name": "eaindray1877",
      "u_profile_pic": "https://graph.facebook.com/818952491620096/picture?type=large",
    },
    Object {
      "id": 7416,
      "live": 0,
      "rank": "757",
      "u_first_name": "ဟန္",
      "u_follower_count": 76,
      "u_last_name": "ထူးစ်ာန္",
      "u_nick_name": "ဟန္7416",
      "u_profile_pic": "https://graph.facebook.com/1669030049827418/picture?type=large",
    },
    Object {
      "id": 1888,
      "live": 0,
      "rank": "690",
      "u_first_name": "May",
      "u_follower_count": 261,
      "u_last_name": "Nanda",
      "u_nick_name": "may1888",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/11_27_411888_profile.png",
    },
    Object {
      "id": 2496,
      "live": 0,
      "rank": "652",
      "u_first_name": "Shwe",
      "u_follower_count": 200,
      "u_last_name": "Wint Shein",
      "u_nick_name": "shwe2496",
      "u_profile_pic": "https://graph.facebook.com/2066130473606661/picture?type=large",
    },
    Object {
      "id": 1871,
      "live": 0,
      "rank": "630",
      "u_first_name": "Thu",
      "u_follower_count": 278,
      "u_last_name": "Ta",
      "u_nick_name": "thu1871",
      "u_profile_pic": "https://graph.facebook.com/1946487648959127/picture?type=large",
    },
    Object {
      "id": 7905,
      "live": 0,
      "rank": "560",
      "u_first_name": "San",
      "u_follower_count": 3,
      "u_last_name": "Myat",
      "u_nick_name": "san7905",
      "u_profile_pic": "https://graph.facebook.com/118936445579036/picture?type=large",
    },
    Object {
      "id": 1974,
      "live": 0,
      "rank": "505",
      "u_first_name": "Paing Oak",
      "u_follower_count": 315,
      "u_last_name": "Soe Aung",
      "u_nick_name": "paingoak1974",
      "u_profile_pic": "https://graph.facebook.com/2024677957775066/picture?type=large",
    },
    Object {
      "id": 3861,
      "live": 0,
      "rank": "442",
      "u_first_name": "Thoon",
      "u_follower_count": 113,
      "u_last_name": "Ngwe Sin",
      "u_nick_name": "thoon3861",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/19_52_363861_profile.png",
    },
  ],
}
`;

exports[`Hlwint API Service able to get broadcaster ended data 1`] = `
Object {
  "data": Object {
    "duration": "00:00:26",
    "first_name": "Ko",
    "id": 384,
    "last_name": "Kyaw",
    "new_follower": 0,
    "new_income": 0,
    "nick_name": "ko384",
    "profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "tag": Array [
      Object {
        "id": 1,
        "t_color_code": "#CCAAEE",
        "t_name": "#beautytips",
      },
      Object {
        "id": 2,
        "t_color_code": "#958882",
        "t_name": "#singing",
      },
    ],
    "title": "test title",
    "total_view": 12,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get current user profile 1`] = `
Object {
  "data": Object {
    "bot": 0,
    "data_usage": null,
    "id": 384,
    "u_account_status": "active",
    "u_biography": null,
    "u_city": "Pathein",
    "u_coins": 3610,
    "u_created_time": "2017-11-13 15:36:22",
    "u_date_of_birth": "null",
    "u_device_os": "android",
    "u_duration": "00:00:00",
    "u_email": "null",
    "u_facebook_id": "367599367030660",
    "u_fan_count": 1,
    "u_first_name": "Ko",
    "u_follower_count": 1,
    "u_full_name": "Ko Kyaw",
    "u_gender": "female",
    "u_google_id": "null",
    "u_income": 0,
    "u_ip_address": "119.2.52.244",
    "u_key_id": "91600",
    "u_larger_profile_pic": null,
    "u_last_device": "android test",
    "u_last_login_time": "2018-01-15 10:47:55",
    "u_last_name": "Kyaw",
    "u_nick_name": "ko384",
    "u_phone_number": "09",
    "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "u_reason_banned": "",
    "u_reward_status": 0,
    "u_token": "DIuEZR27MJ83BxLWJaxq9UvYpzqGWSz0EYQQNU8gRpSLBnA0rHRwYhIvyPg9",
    "u_type": 1,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get explore data 1`] = `
Object {
  "image": "https://dashboard.imliveapp.com/public/mlive_img/mlive.png",
  "message": "success",
  "nearby": Array [
    Object {
      "id": 3018,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1583112471734457/picture?type=large",
    },
    Object {
      "id": 4112,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1668681356530530/picture?type=large",
    },
    Object {
      "id": 1768,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1737245439621574/picture?type=large",
    },
    Object {
      "id": 3194,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/2018473215104706/picture?type=large",
    },
    Object {
      "id": 2085,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1972688356314634/picture?type=large",
    },
    Object {
      "id": 52,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/362155060911834/picture?type=large",
    },
    Object {
      "id": 16,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1602460376480950/picture?type=large",
    },
    Object {
      "id": 70,
      "live": 0,
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/15_48_1670_profile.png",
    },
    Object {
      "id": 27,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/395585250857991/picture?type=large",
    },
    Object {
      "id": 83,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/513977715626828/picture?type=large",
    },
  ],
  "tag": Array [
    Object {
      "id": 8,
      "t_color_code": "#975565",
      "t_count": 58,
      "t_name": "#shorttrip",
      "t_status": "active",
    },
    Object {
      "id": 151,
      "t_color_code": "#de6429",
      "t_count": 55,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 2,
      "t_color_code": "#958882",
      "t_count": 55,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 4,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#funtime",
      "t_status": "active",
    },
    Object {
      "id": 24,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#popmusic",
      "t_status": "active",
    },
    Object {
      "id": 16,
      "t_color_code": "#009848",
      "t_count": 52,
      "t_name": "#party",
      "t_status": "active",
    },
    Object {
      "id": 21,
      "t_color_code": "#009848",
      "t_count": 51,
      "t_name": "#happyweekend",
      "t_status": "active",
    },
    Object {
      "id": 1,
      "t_color_code": "#CCAAEE",
      "t_count": 51,
      "t_name": "#beautytips",
      "t_status": "active",
    },
    Object {
      "id": 7,
      "t_color_code": "#958882",
      "t_count": 50,
      "t_name": "#nightout",
      "t_status": "active",
    },
    Object {
      "id": 18,
      "t_color_code": "#975565",
      "t_count": 50,
      "t_name": "#beyourvalentine",
      "t_status": "active",
    },
  ],
  "toprank": Array [
    Object {
      "id": 6087,
      "live": 0,
      "rank": "19665",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/14_19_326087_profile.png",
    },
    Object {
      "id": 7462,
      "live": 0,
      "rank": "13260",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/18_09_037462_profile.png",
    },
    Object {
      "id": 4112,
      "live": 0,
      "rank": "5979",
      "u_profile_pic": "https://graph.facebook.com/1668681356530530/picture?type=large",
    },
    Object {
      "id": 18,
      "live": 0,
      "rank": "3470",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/22_08_2118_profile.png",
    },
    Object {
      "id": 1823,
      "live": 0,
      "rank": "3230",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/09_54_401823_profile.png",
    },
    Object {
      "id": 2353,
      "live": 0,
      "rank": "2500",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/19_44_582353_profile.png",
    },
    Object {
      "id": 7627,
      "live": 0,
      "rank": "2280",
      "u_profile_pic": "https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg?sz=200",
    },
    Object {
      "id": 5549,
      "live": 0,
      "rank": "2024",
      "u_profile_pic": "https://graph.facebook.com/464218360641334/picture?type=large",
    },
    Object {
      "id": 2499,
      "live": 0,
      "rank": "1762",
      "u_profile_pic": "https://graph.facebook.com/901009120057896/picture?type=large",
    },
    Object {
      "id": 7397,
      "live": 0,
      "rank": "1493",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/16_46_397397_profile.png",
    },
  ],
}
`;

exports[`Hlwint API Service able to get nearby user 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1823,
      "live": 0,
      "u_first_name": "Eaint",
      "u_follower_count": 409,
      "u_last_name": "Treasure",
      "u_nick_name": "eaint1823",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/09_54_401823_profile.png",
    },
    Object {
      "id": 5549,
      "live": 0,
      "u_first_name": "Nang",
      "u_follower_count": 402,
      "u_last_name": "Sein",
      "u_nick_name": "nansandar5549",
      "u_profile_pic": "https://graph.facebook.com/464218360641334/picture?type=large",
    },
    Object {
      "id": 2499,
      "live": 0,
      "u_first_name": "PhomeShein",
      "u_follower_count": 354,
      "u_last_name": "Htet",
      "u_nick_name": "phomeshein2499",
      "u_profile_pic": "https://graph.facebook.com/901009120057896/picture?type=large",
    },
    Object {
      "id": 2494,
      "live": 1,
      "u_first_name": "Khay Sett",
      "u_follower_count": 346,
      "u_last_name": "Thwin",
      "u_nick_name": "khaysett2494",
      "u_profile_pic": "https://graph.facebook.com/460452244350459/picture?type=large",
    },
    Object {
      "id": 1974,
      "live": 0,
      "u_first_name": "Paing Oak",
      "u_follower_count": 315,
      "u_last_name": "Soe Aung",
      "u_nick_name": "paingoak1974",
      "u_profile_pic": "https://graph.facebook.com/2024677957775066/picture?type=large",
    },
    Object {
      "id": 1877,
      "live": 0,
      "u_first_name": "Eaindray",
      "u_follower_count": 296,
      "u_last_name": "Chit Su",
      "u_nick_name": "eaindray1877",
      "u_profile_pic": "https://graph.facebook.com/818952491620096/picture?type=large",
    },
    Object {
      "id": 1871,
      "live": 0,
      "u_first_name": "Thu",
      "u_follower_count": 278,
      "u_last_name": "Ta",
      "u_nick_name": "thu1871",
      "u_profile_pic": "https://graph.facebook.com/1946487648959127/picture?type=large",
    },
    Object {
      "id": 2353,
      "live": 0,
      "u_first_name": "April",
      "u_follower_count": 267,
      "u_last_name": "Pink",
      "u_nick_name": "april2353",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/19_44_582353_profile.png",
    },
    Object {
      "id": 1888,
      "live": 0,
      "u_first_name": "May",
      "u_follower_count": 261,
      "u_last_name": "Nanda",
      "u_nick_name": "may1888",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/11_27_411888_profile.png",
    },
    Object {
      "id": 2498,
      "live": 0,
      "u_first_name": "Thun",
      "u_follower_count": 226,
      "u_last_name": "Zaw",
      "u_nick_name": "thun2498",
      "u_profile_pic": "https://graph.facebook.com/1882290015114642/picture?type=large",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get stream by used tags 1`] = `
Object {
  "data": Array [
    Object {
      "id": 384,
      "live": 1,
      "u_first_name": "Ko",
      "u_follower_count": 1,
      "u_last_name": "Kyaw",
      "u_nick_name": "ko384",
      "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get user follower 1`] = `
Object {
  "data": Array [],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get viewer ended 1`] = `
Object {
  "data": Object {
    "biography": null,
    "first_name": "Ko",
    "following": "false",
    "id": 384,
    "last_name": "Kyaw",
    "nick_name": "ko384",
    "profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "view_count": 1,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get viewer list 1`] = `
Object {
  "broadcaster_coin": 3610,
  "data": Array [
    Object {
      "id": 384,
      "u_first_name": "Ko",
      "u_follower_count": 1,
      "u_last_name": "Kyaw",
      "u_nick_name": "ko384",
      "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to input task to task log 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to join stream 1`] = `
Object {
  "message": "success",
  "viewer_count": 1,
}
`;

exports[`Hlwint API Service able to leave the stream 1`] = `
Object {
  "message": "success",
  "viewer_count": 0,
}
`;

exports[`Hlwint API Service able to list tags 1`] = `
Object {
  "data": Array [
    Object {
      "id": 8,
      "t_color_code": "#975565",
      "t_count": 58,
      "t_name": "#shorttrip",
      "t_status": "active",
    },
    Object {
      "id": 2,
      "t_color_code": "#958882",
      "t_count": 55,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 151,
      "t_color_code": "#de6429",
      "t_count": 55,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 4,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#funtime",
      "t_status": "active",
    },
    Object {
      "id": 24,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#popmusic",
      "t_status": "active",
    },
    Object {
      "id": 16,
      "t_color_code": "#009848",
      "t_count": 52,
      "t_name": "#party",
      "t_status": "active",
    },
    Object {
      "id": 21,
      "t_color_code": "#009848",
      "t_count": 51,
      "t_name": "#happyweekend",
      "t_status": "active",
    },
    Object {
      "id": 1,
      "t_color_code": "#CCAAEE",
      "t_count": 51,
      "t_name": "#beautytips",
      "t_status": "active",
    },
    Object {
      "id": 7,
      "t_color_code": "#958882",
      "t_count": 50,
      "t_name": "#nightout",
      "t_status": "active",
    },
    Object {
      "id": 18,
      "t_color_code": "#975565",
      "t_count": 50,
      "t_name": "#beyourvalentine",
      "t_status": "active",
    },
    Object {
      "id": 19,
      "t_color_code": "#778766",
      "t_count": 50,
      "t_name": "#Mondaymotivation",
      "t_status": "active",
    },
    Object {
      "id": 28,
      "t_color_code": "#B8860B",
      "t_count": 50,
      "t_name": "#rapper",
      "t_status": "active",
    },
    Object {
      "id": 3,
      "t_color_code": "#525997",
      "t_count": 50,
      "t_name": "#beautytutorials",
      "t_status": "active",
    },
    Object {
      "id": 26,
      "t_color_code": "#D97A64",
      "t_count": 33,
      "t_name": "#painting",
      "t_status": "active",
    },
    Object {
      "id": 144,
      "t_color_code": "#566b88",
      "t_count": 12,
      "t_name": "#tag",
      "t_status": "active",
    },
    Object {
      "id": 207,
      "t_color_code": "#c095de",
      "t_count": 11,
      "t_name": "TESTAG",
      "t_status": "active",
    },
    Object {
      "id": 5,
      "t_color_code": "#664653",
      "t_count": 5,
      "t_name": "#TGIF",
      "t_status": "active",
    },
    Object {
      "id": 30,
      "t_color_code": "#00008B",
      "t_count": 5,
      "t_name": "#beastar",
      "t_status": "active",
    },
    Object {
      "id": 145,
      "t_color_code": "#6df2e2",
      "t_count": 5,
      "t_name": "#dinner",
      "t_status": "active",
    },
    Object {
      "id": 140,
      "t_color_code": "#25ac6c",
      "t_count": 4,
      "t_name": "#Khinyadanar",
      "t_status": "active",
    },
    Object {
      "id": 27,
      "t_color_code": "#A9A9A9",
      "t_count": 4,
      "t_name": "#cooking",
      "t_status": "active",
    },
    Object {
      "id": 178,
      "t_color_code": "#18481d",
      "t_count": 4,
      "t_name": "#Cooking",
      "t_status": "active",
    },
    Object {
      "id": 152,
      "t_color_code": "#cca7af",
      "t_count": 4,
      "t_name": "#phyu",
      "t_status": "active",
    },
    Object {
      "id": 141,
      "t_color_code": "#3520ea",
      "t_count": 3,
      "t_name": "#Ayelinhtike",
      "t_status": "active",
    },
    Object {
      "id": 154,
      "t_color_code": "#1bd23b",
      "t_count": 3,
      "t_name": "#cosplay",
      "t_status": "active",
    },
    Object {
      "id": 212,
      "t_color_code": "#6e46b9",
      "t_count": 2,
      "t_name": "#howtomusic",
      "t_status": "active",
    },
    Object {
      "id": 126,
      "t_color_code": "#5eeb78",
      "t_count": 2,
      "t_name": "#tired",
      "t_status": "active",
    },
    Object {
      "id": 125,
      "t_color_code": "#472b9a",
      "t_count": 2,
      "t_name": "#office",
      "t_status": "active",
    },
    Object {
      "id": 150,
      "t_color_code": "#e4a8e2",
      "t_count": 2,
      "t_name": "#haha",
      "t_status": "active",
    },
    Object {
      "id": 146,
      "t_color_code": "#565b81",
      "t_count": 2,
      "t_name": "#ML",
      "t_status": "active",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to modify end time 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to retrieve live data 1`] = `
Object {
  "live_lists": Array [
    Object {
      "first_name": "Aung Paing",
      "id": 1821,
      "larger_profile_pic": null,
      "last_name": "Oo",
      "nick_name": "aungpaing1821",
      "profile_pic": "https://graph.facebook.com/1786554744722324/picture?type=large",
      "type": 2,
      "view_count": 61,
    },
    Object {
      "first_name": "Khay Sett",
      "id": 2494,
      "larger_profile_pic": null,
      "last_name": "Thwin",
      "nick_name": "khaysett2494",
      "profile_pic": "https://graph.facebook.com/460452244350459/picture?type=large",
      "type": 2,
      "view_count": 23,
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to retrieve live data 2`] = `
Array [
  Object {
    "first_name": "Aung Paing",
    "id": 1821,
    "larger_profile_pic": null,
    "last_name": "Oo",
    "nick_name": "aungpaing1821",
    "profile_pic": "https://graph.facebook.com/1786554744722324/picture?type=large",
    "type": 2,
    "view_count": 61,
  },
  Object {
    "first_name": "Khay Sett",
    "id": 2494,
    "larger_profile_pic": null,
    "last_name": "Thwin",
    "nick_name": "khaysett2494",
    "profile_pic": "https://graph.facebook.com/460452244350459/picture?type=large",
    "type": 2,
    "view_count": 23,
  },
]
`;

exports[`Hlwint API Service able to upload last device 1`] = `
Object {
  "message": "success",
  "promotion": "false",
}
`;

exports[`Hlwint API Service ablle to get user following 1`] = `
Object {
  "data": Array [],
  "message": "success",
}
`;

exports[`Hlwint API Service have a correct login service 1`] = `
Object {
  "data": Object {
    "bot": 0,
    "data_usage": null,
    "id": 384,
    "u_account_status": "active",
    "u_biography": null,
    "u_city": "Pathein",
    "u_coins": 3610,
    "u_created_time": "2017-11-13 15:36:22",
    "u_date_of_birth": "null",
    "u_device_os": "android",
    "u_duration": "00:00:00",
    "u_email": "null",
    "u_facebook_id": "367599367030660",
    "u_fan_count": 1,
    "u_first_name": "Ko",
    "u_follower_count": 1,
    "u_full_name": "Ko Kyaw",
    "u_gender": "female",
    "u_google_id": "null",
    "u_income": 0,
    "u_ip_address": "119.2.52.244",
    "u_key_id": "91600",
    "u_larger_profile_pic": null,
    "u_last_device": "android test",
    "u_last_login_time": "2018-01-15 08:04:18",
    "u_last_name": "Kyaw",
    "u_nick_name": "ko384",
    "u_phone_number": "09",
    "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "u_reason_banned": "",
    "u_reward_status": 0,
    "u_token": "KvsMQXAyRaEjd8g7OwZPFtc9xmkYH1yvJPViSgoso2IAtHPJb4rS9gkAfA1o",
    "u_type": 1,
  },
  "message": "success",
  "version": "18",
}
`;
